--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -13,7 +13,7 @@
 
       <div class="product-info">
         <div class="product-trust-badge">
-          <p>Subscribe & save 20% + unlock more savings with bundles</p>
+          <p>Subscribe & save 15% + unlock more savings with bundles</p>
         </div>
 
         {% if product.metafields.reviews.rating %}
@@ -134,9 +134,10 @@
 {
   "product": {
     "id": {{ product.id }},
+    "first_image": {{ product.featured_image | image_url: width: 2000 | json }},
     "variants": [
       {% for variant in product.variants %}
-      {"id":{{ variant.id }},"title":{{ variant.title | json }},"price":{{ variant.price }},"compare_at_price":{{ variant.compare_at_price | default: 0 }},"available":{{ variant.available | json }},"option1":{{ variant.option1 | json }},"option2":{{ variant.option2 | json }},"option3":{{ variant.option3 | json }},"image":{{ variant.image | img_url: '2000x' | json }},"sku":{{ variant.sku | json }}}{% unless forloop.last %},{% endunless %}
+      {"id":{{ variant.id }},"title":{{ variant.title | json }},"price":{{ variant.price }},"compare_at_price":{{ variant.compare_at_price | default: 0 }},"available":{{ variant.available | json }},"option1":{{ variant.option1 | json }},"option2":{{ variant.option2 | json }},"option3":{{ variant.option3 | json }},"image":{{ variant.image | default: product.featured_image | image_url: width: 2000 | json }},"sku":{{ variant.sku | json }}}{% unless forloop.last %},{% endunless %}
       {% endfor %}
     ],
     "options": [
