--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -107,7 +107,7 @@
               <p class="product-subscriber-benefits-title">Subscriber benefits:</p>
               <ul class="product-subscriber-benefits-list">
                 <li>VIP exclusive perks and early access</li>
-                <li>Always save 15%</li>
+                <li>Save 15%</li>
                 <li>Flexible delivery: Adjust, skip, cancel anytime</li>
               </ul>
               <a href="#faq" class="product-frequency-link">Which frequency is right for me?</a>
