--- a/templates/page.shop-landing.liquid
+++ b/templates/page.shop-landing.liquid
@@ -27,7 +27,7 @@
                                  alt="Citrus Blossom Laundry Paks" 
                                  class="product-img"
                                  loading="lazy">
-                            <div class="product-label">Citrus Blossom</div>
+                            <div class="product-label">Citrus Flower Blossom</div>
                         </div>
                         <div class="product-image-wrapper">
                             <img src="{{ 'packaging-piel-sensibles.jpg' | file_img_url: '800x' }}" 
