--- a/templates/page.wholesale.liquid
+++ b/templates/page.wholesale.liquid
@@ -31,7 +31,7 @@
                                  alt="Citrus Blossom Laundry Paks" 
                                  class="product-img"
                                  loading="lazy">
-                            <div class="product-label">Citrus Blossom</div>
+                            <div class="product-label">Citrus Flower Blossom</div>
                         </div>
                         <div class="product-image-wrapper">
                             <img src="https://lovepaks.com/cdn/shop/files/packaging-piel-sensibles.jpg?v=1768273765&width=800" 
